[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "callprofiler"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[tool.maturin]
python-source = "python"
module-name = "callprofiler._callprofiler"
features = ["pyo3/extension-module"]
